# tinystamp

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yaml  test.yaml
src/: lib.rs  main.rs
