[package]
name = "tinystamp"
description = "A tiny, zero-dependencies crate to format a timestamp as an ISO-8601 string"
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://github.com/daniel7grant/tinystamp"
repository = "https://github.com/daniel7grant/tinystamp"

[dependencies]

[dev-dependencies]
chrono = "0.4.37"
pretty_assertions = "1.4.0"
proptest = "1.4.0"
time = { version = "0.3.34", features = ["formatting"] }

[features]
default = ["std"]
std = []
